# rust-web-app-w-fedimint

./: Cargo.toml  JUSTFILE  README.md
.cargo/: config.toml
sql/dev_initial/: 01-create-schema.sql
src/: config.rs  main.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/model/: user.rs
src/web/: error.rs  routes_login.rs  routes_static.rs
web-folder/: index.html
